samples/_failures_safe/1761640251_c994e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d9ffd43.c:168:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 | void print_state_info
      | ^~~~
